<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright © 2012 ecuacion.jp (info@ecuacion.jp)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>jp.ecuacion.lib</groupId>
	<artifactId>ecuacion-lib-parent</artifactId>
	<packaging>pom</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<organization>
		<name>ecuacion.jp</name>
	</organization>
	<properties>
		<java.version>21</java.version>
		<!-- maven-compiler-plugin referred properties (no need to plugin definition) -->
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<repository.ecuacion-repo-sftp-root>sftp://maven-repo.ecuacion.jp/home/ytbiz/www/maven-repo.ecuacion.jp/public</repository.ecuacion-repo-sftp-root>
		<repository.ecuacion-repo-http-root>http://maven-repo.ecuacion.jp/public</repository.ecuacion-repo-http-root>
		<repository.ecuacion-repo-sftp-private-root>sftp://maven-repo.ecuacion.jp/home/ytbiz/www/maven-repo.ecuacion.jp/private</repository.ecuacion-repo-sftp-private-root>
		<repository.ecuacion-repo-http-private-root>http://maven-repo.ecuacion.jp/private</repository.ecuacion-repo-http-private-root>
		<remote-location.javadoc>sftp://javadoc.ecuacion.jp/home/ytbiz/www/javadoc.ecuacion.jp</remote-location.javadoc>
		<checkstyle.config.site>https://ecuacion-jp.github.io/config/common/checkstyle</checkstyle.config.site>
		<ecuacion-lib.version>0.0.1-SNAPSHOT</ecuacion-lib.version>
		<!-- 3rd party module versions -->
		<jakarta.el.jakarta.el-api.version>6.0.1</jakarta.el.jakarta.el-api.version>
		<org.apache.maven.wagon.version>3.5.3</org.apache.maven.wagon.version>
		<org.apache.maven.plugins.maven-source-plugin.version>3.3.1</org.apache.maven.plugins.maven-source-plugin.version>
		<org.apache.maven.plugins.maven-javadoc-plugin.version>3.11.2</org.apache.maven.plugins.maven-javadoc-plugin.version>
		<org.codehaus.mojo.wagon-maven-plugin.version>2.0.2</org.codehaus.mojo.wagon-maven-plugin.version>
		<com.mycila.license-maven-plugin.version>4.6</com.mycila.license-maven-plugin.version>
		<org.apache.maven.plugins.maven-checkstyle-plugin.version>3.6.0</org.apache.maven.plugins.maven-checkstyle-plugin.version>
		<com.puppycrawl.tools.checkstyle.version>13.2.0</com.puppycrawl.tools.checkstyle.version>
		<com.github.spotbugs.spotbugs-maven-plugin.version>4.9.3.2</com.github.spotbugs.spotbugs-maven-plugin.version>
		<com.github.spotbugs.spotbugs.version>4.9.8</com.github.spotbugs.spotbugs.version>
		<org.apache.maven.plugins.maven-enforcer-plugin.version>3.5.0</org.apache.maven.plugins.maven-enforcer-plugin.version>
		<org.apache.commons.commons-lang3.version>3.20.0</org.apache.commons.commons-lang3.version>
		<commons-io.commons-io.version>2.21.0</commons-io.commons-io.version>
	</properties>
	<distributionManagement>
		<!-- ビルドサーバでのみ使用。作成されたjarのdeploy先 -->
		<repository>
			<!-- 一般ユーザには配置不可。build環境からのみ可能 -->
			<id>ecuacion-repo-sftp</id>
			<name>ecuacion maven repository</name>
			<url>${repository.ecuacion-repo-sftp-root}</url>
		</repository>
	</distributionManagement>
	<build>
		<extensions>
			<!-- Enabling the use of SSH -->
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh</artifactId>
				<version>${org.apache.maven.wagon.version}</version>
			</extension>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh-external</artifactId>
				<version>${org.apache.maven.wagon.version}</version>
			</extension>
		</extensions>
		
		<pluginManagement>
			<plugins>

				<!-- maven-source-plugin (outputs a jar of source) -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${org.apache.maven.plugins.maven-source-plugin.version}</version>
					<executions>
						<execution>
							<phase>package</phase>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<!-- maven-javadoc-plugin (outputs a jar of javadocs) -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${org.apache.maven.plugins.maven-javadoc-plugin.version}</version>
					<configuration>
						<show>protected</show>
						<encoding>UTF-8</encoding>
						<charset>UTF-8</charset>
						<docencoding>UTF-8</docencoding>
						<failOnError>true</failOnError>
						<failOnWarnings>false</failOnWarnings>
						<doclint>all,-missing</doclint>
						<excludePackageNames>*.internal</excludePackageNames>
						<additionalJOptions>
							<additionalJOption>-Xmaxerrs</additionalJOption>
							<additionalJOption>1000</additionalJOption>
							<additionalJOption>-Xmaxwarns</additionalJOption>
							<additionalJOption>1000</additionalJOption>
						</additionalJOptions>
					</configuration>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<phase>install</phase>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<!-- wagon to upload javadoc.jar -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>wagon-maven-plugin</artifactId>
					<version>${org.codehaus.mojo.wagon-maven-plugin.version}</version>
					<configuration>
						<fromFile>${project.build.directory}/${project.build.finalName}-javadoc.jar</fromFile>
						<url>${remote-location.javadoc}/work</url>
						<serverId>ecuacion-repo-sftp</serverId>
					</configuration>
					<executions>
						<execution>
							<id>upload-javadoc-to-server</id>
							<phase>deploy</phase>
							<goals>
								<goal>upload-single</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<!-- mycila license-maven-plugin -->
				<plugin>
					<groupId>com.mycila</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>${com.mycila.license-maven-plugin.version}</version>
					<executions>
					<execution>
						<id>license</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
					</executions>
					<configuration>
						<properties>
							<owner>ecuacion.jp</owner>
							<email>info@ecuacion.jp</email>
							<year>2012</year>
						</properties>
						<licenseSets>
							<licenseSet>
								<header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</header>
								<excludes>
									<exclude>src/test/resources/**</exclude>
									<exclude>src/main/resources/**</exclude>
									<exclude>**/*.css</exclude>
									<exclude>**/*.txt</exclude>
									<exclude>**/*.md</exclude>
								</excludes>
							</licenseSet>
						</licenseSets>
					</configuration>
				</plugin>

				<!-- checkstyle -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>${org.apache.maven.plugins.maven-checkstyle-plugin.version}</version>
					<dependencies>
						<dependency>
							<groupId>com.puppycrawl.tools</groupId>
							<artifactId>checkstyle</artifactId>
							<version>${com.puppycrawl.tools.checkstyle.version}</version>
						</dependency>
					</dependencies>
					<configuration>
						<failOnViolation>false</failOnViolation>
						<failsOnError>false</failsOnError>
						<violationSeverity>info</violationSeverity>
						<configLocation>${checkstyle.config.site}/google_checks.xml</configLocation>
						<propertiesLocation>${checkstyle.config.site}/checkstyle-for-libs-and-utils.properties</propertiesLocation>
						<sourceDirectories>
							<sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
							<sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory>
						</sourceDirectories>
					</configuration>
					<executions>
						<execution>
							<id>checkstyle</id>
							<phase>validate</phase>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<!-- spotbugs -->
				<plugin>
					<groupId>com.github.spotbugs</groupId>
					<artifactId>spotbugs-maven-plugin</artifactId>
					<version>${com.github.spotbugs.spotbugs-maven-plugin.version}</version>
					<dependencies>
						<dependency>
							<groupId>com.github.spotbugs</groupId>
							<artifactId>spotbugs</artifactId>
							<version>${com.github.spotbugs.spotbugs.version}</version>
						</dependency>
					</dependencies>
					<executions>
						<execution>
							<phase>test-compile</phase>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<excludeFilterFile>https://ecuacion-jp.github.io/config/common/spotbugs/exclude.xml</excludeFilterFile>
						<failOnError>true</failOnError>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		
		<plugins>

			<!-- maven-enforcer-plugin (maven version指定) -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>${org.apache.maven.plugins.maven-enforcer-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>enforce</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<rules>
						<requireMavenVersion>
							<version>3.9.5</version>
						</requireMavenVersion>
					</rules>
				</configuration>
			</plugin>

		</plugins>
	</build>
	<dependencyManagement>
		<dependencies>

			<!-- ecuacion-lib -->
			<dependency>
				<groupId>jp.ecuacion.lib</groupId>
				<artifactId>ecuacion-lib-core</artifactId>
				<version>${ecuacion-lib.version}</version>
			</dependency>
			<dependency>
				<groupId>jp.ecuacion.lib</groupId>
				<artifactId>ecuacion-lib-jpa</artifactId>
				<version>${ecuacion-lib.version}</version>
			</dependency>
			<dependency>
				<groupId>jp.ecuacion.lib</groupId>
				<artifactId>ecuacion-lib-validation</artifactId>
				<version>${ecuacion-lib.version}</version>
			</dependency>

			<!-- other -->

			<!-- apache commons -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${org.apache.commons.commons-lang3.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.commons-io.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<modules>
		<module>ecuacion-lib-dependency-jakartaee</module>
		<module>ecuacion-lib-core</module>
		<module>ecuacion-lib-jpa</module>
		<module>ecuacion-lib-validation</module>
	</modules>
</project>
